--- a/client/style.css
+++ b/client/style.css
@@ -3,6 +3,10 @@
     src: url("./Tahoma.woff");
 }
 @font-face{
+    font-family: "Droid Sans";
+    src: url("./lib/droid-sans-2-webfont/DroidSans.woff");
+}
+@font-face{
     font-family: "Comic Sans MS";
     src: url("./comic.ttf");
 }
@@ -140,7 +144,7 @@
 }
 
 *{
-    font-family: "Tahoma";
+    font-family: "Droid Sans";
 }
 img{
     -webkit-user-drag: none;
@@ -860,7 +864,8 @@ span .bubble_text{
     height:25px;
     display:flex;
     flex-direction:column;
-    align-items: left;
+    text-align: left;
+    font-weight: bold;
     z-index:999;
     justify-content: center;
 }
