--- a/client/style.css
+++ b/client/style.css
@@ -515,28 +515,27 @@ The Main UI is much simpler
 .nametag{
     position: absolute;
     top: 0;
-    border: 1px solid black;
-    padding: 7px;
-    background: #ffffe1;
-    font-size: 12px;
-    border-radius: 9px;
     z-index: 2;
     user-select: none;
     max-width: 200%;
     word-wrap: break-word;
+    font-weight:normal;
+    background: #000000ad;
+    color: white;
+    border-radius: 5px;
+    padding: 3 7 3 7;
+    text-align: center;
+    font-size: 14px;
 }
 .tag {
     position: absolute;
-    border-style: solid;
-    border-width: 4px 12px 4px 0;
-    border-radius: 9px;
-    border: #000000 solid 1px;
-    padding: 5px 6px;
-    background: #ffffe1;
-    transform: translateY(-100%);
+    border-radius: 5px;
+    padding: 3px 7px;
+    background: #000000ad;
+    color: white;
+    transform: translateY(-110%);
     font-size: 11px;
     font-weight: bold;
-    color: black;
     display: none;
 }
 .bubble-text{
