--- a/client/style.css
+++ b/client/style.css
@@ -635,17 +635,17 @@ span .bubble_text{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgb(0 0 0 / 0%);
 }
 .error_message{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 32px;
-    background-color: #ffffe1;
-    color: black;
-    border: 1px solid black;
+    padding: 15px;
+    background-color: #0000007a;
+    color: #ffffff;
+    border: 1px solid #ffffff;
     border-radius: 9px;
     font-size: 17px;
     line-height: 1;
