--- a/client/style.css
+++ b/client/style.css
@@ -635,7 +635,7 @@ span .bubble_text{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0 0 0 / 0%);
+    background-color: rgb(0 0 0 / 41%);
 }
 .error_message{
     position: absolute;
@@ -643,9 +643,10 @@ span .bubble_text{
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 15px;
-    background-color: #0000007a;
+    background-color: #313131cc;
     color: #ffffff;
-    border: 1px solid #ffffff;
+    box-shadow: 0px 0px 20px #000000b5;
+    border: 3px solid #ffffff;
     border-radius: 9px;
     font-size: 17px;
     line-height: 1;
